**  denotes quite substantial/important changes
*** denotes really big changes 

1.7-24

* Fix of bug in extract.lme.cov2, which could cause gamm to fail when
  a correlation structure was nested inside a grouping factor finer than
  the finest random effect grouping factor. 

1.7-23

*** Fix of severe bug introduced with R 2.15.2 LAPACK change. The shipped
  version of dsyevr can fail to produce orthogonal eigenvectors when 
  uplo='U' (upper triangle of symmetric matrix used), as opposed to 'L'. 
  This led to a substantial number of gam smoothing parameter estimation 
  convergence failures, as the key stabilizing re-parameterization was 
  substantially degraded. The issue did not affect gaussian additive models
  with GCV model selection. Other models could fail to converge any further 
  as soon as any smoothing parameter became `large', as happens when a 
  smooth is estimated as a straight line. check.gam reported the lack of full 
  convergence, but the issue could also generate complete fit failures.
  Picked up late as full test suite had only been run on R > 2.15.1 with an 
  external LAPACK.

** 'ti' smooth specification introduced, which provides a much better (and 
  very simple) way of allowing nested models based on 'te' type tensor 
  product smooths. 'ti' terms are used to set up smooth interactions 
  excluding main effects (so ti(x,z) is like x:z while te(x,z) is more
  like x*z, although the analogy is not exact). 

* summary.gam now uses a more efficient approach to p-value computation 
  for smooths, using the factor R from the QR factorization of the weighted 
  model matrix produced during fitting. This is a weighted version of the 
  Wood (2013) statistic used previously - simulations in that paper 
  essentially unchanged by the change. 

* summary.gam now deals gracefully with terms such as "fs" smooths 
  estimated using gamm, for which p-values can no be computed. (thanks to 
  Gavin Simpson).
